--- a/PA05_novotny_alexander/PA05_novotny_alexander.vcxproj
+++ b/PA05_novotny_alexander/PA05_novotny_alexander.vcxproj
@@ -139,6 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="PA05.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="PA05.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
