Changed vector to priority queue

--- a/PA05_novotny_alexander/PA05_novotny_alexander.vcxproj.filters
+++ b/PA05_novotny_alexander/PA05_novotny_alexander.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="PA05.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Event.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PA05.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Event.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
