Implemented priority queue

--- a/PA05_novotny_alexander/PA05_novotny_alexander.vcxproj
+++ b/PA05_novotny_alexander/PA05_novotny_alexander.vcxproj
@@ -141,10 +141,12 @@
   <ItemGroup>
     <ClCompile Include="Event.cpp" />
     <ClCompile Include="PA05.cpp" />
+    <ClCompile Include="PriorityQueue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Event.h" />
     <ClInclude Include="PA05.h" />
+    <ClInclude Include="PriorityQueue.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
