--- a/PA05_novotny_alexander/Makefile
+++ b/PA05_novotny_alexander/Makefile
@@ -4,8 +4,8 @@ CFLAGS=-c -Wall -std=c++11
 all: banksim numGenerator
 
 # Main program for assignment
-banksim: PA05.o Event.o
-	g++ PA05.o Event.o -o $(PROGRAM_NAME)
+banksim: PA05.o Event.o PriorityQueue.o
+	g++ PA05.o Event.o PriorityQueue.o -o $(PROGRAM_NAME)
 
 # Random event generator
 numGenerator: numGenerator.o
